HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportGeneric/Source/Main.uv
//! Rejected FFI specimen for generic hosted exports.

#host_export("C")
public procedure hostedGeneric<TValue>() -> i32 {
    return 0
}

